# dictparser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/dictparser/: __init__.py  _dictparser_data.py  _engine.py  _init_p311.py  _init_p36.py  _type_utils.py  _type_utils_p310.py  _type_utils_p36.py  engine.py  mapper.py  pylint.py  types.py
tests/dictparser/: test_basics.py  test_basics_p310.py  test_basics_p36.py  test_datetime.py  test_field.py  test_self_ref.py  test_type_info.py  test_unions.py
